The iterator next() method now thows a NoSuchElementException Added a 'finally' to release file resource
git-svn-id: https://svn.apache.org/repos/asf/directory/trunks/shared@491281 13f79535-47bb-0310-9956-ffa450edef68